--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server",
-    "dev": "tsc --watch index.ts"
+    "dev": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
